# aa

./: README.md  app.py  pyproject.toml  requirements.txt
src/astra_cli/: __init__.py  main.py  memory.py  runtime.py
src/astra_cli/agent/: __init__.py  controller.py  planner.py  subagent.py
src/astra_cli/model/: __init__.py  gemini_client.py
src/astra_cli/tools/: __init__.py  coding.py  crawler.py  fs.py  registry.py  repo.py  shell.py  strings.py  web.py
src/astra_cli_agent.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
supercli_agent/: README.md  pyproject.toml
supercli_agent/supercli/: __main__.py
supercli_agent/supercli/core/: agent.py  config.py  gemini_client.py
supercli_agent/supercli/ui/: cli.py
supercli_agent/supercli_agent.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
ultra_cli_agent/: README.md  pyproject.toml
ultra_cli_agent/ultra_cli_agent/: cli.py  main.py
ultra_cli_agent/ultra_cli_agent.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
ultra_cli_agent/ultra_cli_agent/core/: config.py  logging.py  planner.py  tools.py
ultra_cli_agent/ultra_cli_agent/providers/: gemini.py
