[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "astra-cli-agent"
version = "0.1.0"
description = "Super-advanced autonomous AI coding pair programmer CLI (Gemini 2.5 Flash Lite only)"
requires-python = ">=3.10"
authors = [{name = "Astra", email = "devnull@example.com"}]
license = {text = "Apache-2.0"}
readme = "README.md"
dependencies = [
	"typer>=0.12.3",
	"rich>=13.7.1",
	"httpx>=0.27.0",
	"pydantic>=2.8.2",
	"beautifulsoup4>=4.12.3",
	"lxml>=5.2.2",
	"readability-lxml>=0.8.1",
	"rapidfuzz>=3.10.0",
	"python-dotenv>=1.0.1",
	"orjson>=3.10.7",
	"tqdm>=4.66.4",
	"pathspec>=0.12.1"
]

[project.scripts]
astra = "astra_cli.main:app"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools]
package-dir = {"" = "src"}