[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "supercli-agent"
version = "0.1.0"
description = "Autonomous AI coding pair programmer CLI (Gemini 2.5 Flash Lite only)"
authors = [{name = "Your Name"}]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "click>=8.1",
  "rich>=13.7",
  "prompt_toolkit>=3.0",
  "requests>=2.32",
  "httpx>=0.27",
  "pydantic>=2.8",
  "uvloop; platform_system == \"Linux\"",
  "nest_asyncio>=1.6",
  "beautifulsoup4>=4.12",
  "lxml>=5.2",
  "tiktoken>=0.7",
  "tenacity>=8.3",
  "networkx>=3.3",
  "orjson>=3.10",
  "pyyaml>=6.0",
]

[project.scripts]
supercli = "supercli.__main__:main"
