[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ultra-cli-agent"
version = "0.1.0"
description = "Ultra-powerful autonomous AI coding pair programmer CLI (Gemini 2.5 Flash Lite)"
requires-python = ">=3.10"
authors = [{name="You"}]
dependencies = [
  "requests>=2.32",
  "beautifulsoup4>=4.12",
  "tqdm>=4.66",
  "rich>=13.7",
  "typer>=0.12",
  "pydantic>=2.7",
  "httpx>=0.27",
  "uvloop; platform_system == \"Linux\""
]

[project.scripts]
ultra = "ultra_cli_agent.cli:app"
